--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,31 +2,22 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
-
+      value: Anamika Dubey
+    
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+    - title: PhD in Electrical and Computer Engineering
+      institution: University of Texas at Austin, Austin TX
+      year: 2012-2015
+      description: Distributed Resource Integration Analysis and Network Design of Electric Power Distribution Systems
+    - title: MSE in Electrical and Computer Engineering
+      institution: University of Texas at Austin, Austin TX
+      year: 2010-2015
+    - title: Bachelor of Technology in Electrical Engineering
+      institution: Indian Institute of Technology (IIT) Roorkee, Roorkee, India
+      year: 2006-2010
+      
 
 - title: Experience
   type: time_table
