--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -10,65 +10,41 @@
     - title: PhD in Electrical and Computer Engineering
       institution: University of Texas at Austin, Austin TX
       year: 2012-2015
-      description: Distributed Resource Integration Analysis and Network Design of Electric Power Distribution Systems
+      description: Dissertation- Distributed Resource Integration Analysis and Network Design of Electric Power Distribution Systems
     - title: MSE in Electrical and Computer Engineering
       institution: University of Texas at Austin, Austin TX
       year: 2010-2015
+      description: Thesis- Impacts of Electric Vehicle Loads on Utility Distribution Network Voltages
     - title: Bachelor of Technology in Electrical Engineering
       institution: Indian Institute of Technology (IIT) Roorkee, Roorkee, India
       year: 2006-2010
-      
+      description: Senior Design Project- Designing Expert Feeder System for Distribution System Phase Balancing
+     
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: Huie-Rogers Endowed Chair Associate Professor
+      institution: School of Electrical Engineering and Computer Science, Washington State University
+      year: 2022 - Present
+    - title: Research Scientist (Joint Appointment)
+      institution: Pacific Northwest National Lab (PNNL)
+      year: 2022 - Present
+    - title: Assistant Professor
+      institution: School of Electrical Engineering and Computer Science, Washington State University
+      year: 2016 - 2022
+    - title: Visiting Reseracher
+    
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2023
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
+        - <a href='https://ieee-pes.org/about-pes/awards-scholarships/ieee-pes-outstanding-young-engineer-award/'>IEEE PES Outstanding Young Engineer Award</a>.
+    - year: 2022
       items: 
-        - Max Planck Medal
+        - Huie-Rogers Endowed Chair Associate Professor of Electrical Engineering
 
 - title: Academic Interests
   type: nested_list
