--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: SCALE - 
+first_name: SCALE 
 middle_name: 
 last_name: 
 email: anamika.dubey@wsu.edu
