--- a/_config.yml
+++ b/_config.yml
@@ -71,9 +71,9 @@ github_username: anamika-dubey # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: # your Twitter handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
-linkedin_username: https://www.linkedin.com/in/anamika-dubey-316a8a11/ # your LinkedIn user name
+linkedin_username: anamika-dubey-316a8a11 # your LinkedIn user name
 telegram_username: # your Telegram user name
-scholar_userid: # https://scholar.google.com/citations?user=y-3RPK0AAAAJ&hl=en&inst=3189495329521712930 your Google Scholar ID
+scholar_userid: # https://scholar.google.com/citations?user=y-3RPK0AAAAJ&hl=en&inst=3189495329521712930 #your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
 whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
 orcid_id: # your ORCID ID
