--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: SCALE Labs
+first_name: SCALE Lab
 middle_name: 
 last_name: (Sustainable Climate-resilient Analytics for Large-scale Energy Systems)
 email: anamika.dubey@wsu.edu
